tempfile/derive_more/tests/compile_fail/as_mut/struct_attr_tuple.rs
#[derive(derive_more::AsMut)]
#[as_mut((i32, f32))]
struct Foo {
    bar: i32,
    baz: f32,
}

fn main() {}
